--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     "contents": [
       {
         "type": "text",
-        "text": "🏮กดรับได้เลย 100 บาท🏮",
+        "text": "🏮 กดรับได้เลย 100 บาท 🏮",
         "weight": "bold",
         "size": "xl",
         "color": "#FF9900",
@@ -187,7 +187,7 @@
         ]
       }
     ],
-    "backgroundColor": "#EEEEEE"
+    "backgroundColor": "#000033"
   },
   "footer": {
     "type": "box",
