--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         ]
       }
     ],
-    "backgroundColor": "#000033"
+    "backgroundColor": "#FFFFFF"
   },
   "footer": {
     "type": "box",
@@ -222,7 +222,7 @@
       }
     ],
     "flex": 0,
-    "backgroundColor": "#000033"
+    "backgroundColor": "#FFFFFF"
   },
   "styles": {
     "hero": {
