--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
         "height": "sm",
         "action": {
           "type": "uri",
-          "label": "สอบถามเพิ่มเติม",
-          "uri": "https://lin.ee/zhVrKOE",
+          "label": "แชร์เครดิตฟรีให้เพื่อน",
+          "uri": "ttps://liff.line.me/1656825879-xL6qKN80",
           "altUri": {
-            "desktop": "https://lin.ee/zhVrKOE"
+            "desktop": "ttps://liff.line.me/1656825879-xL6qKN80"
           }
         },
         "color": "#0099FF"
